--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
                                 <div class="mb-3">
                                     <label for="example" class="form-label fw-bold">Search</label>
                                     <input type="search" class="form-control rounded-1
-                            " id="example" aria-describedby="SearchHelp">
+                            " id="example" >
                                 </div>
-                                <div class="row d-flex justify-content-between align-items-end">
+                                <div class="row d-flex ju   stify-content-between align-items-end">
                                     <div class="col-6">
                                         <div class="mb-3 m-0">
-                                            <label for="exampleFormControlInput1"
+                                            <label for="FormControlInput"
                                                 class="form-label fw-bold">Price</label>
                                             <input type="number" class="form-control rounded-1"
-                                                id="exampleFormControlInput1" placeholder="From">
+                                                id="FormControlInput" placeholder="From">
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -72,7 +72,7 @@
                                     <option value="3">Three</option>
                                 </select>
                                 <label class="mt-2 fw-bold" for="name">Sort by</label>
-                                    <select id="name" class="form-select mt-2 rounded-1" placeholder="All">
+                                    <select id="name" class="form-select mt-2 rounded-1" aria-label="All">
                                         <option selected disabled>Name</option>
                                         <option value="1">Asadbek</option>
                                         <option value="2">Anvarjon</option>
