--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                             <form action="https://echo.htmlacademy.ru" method="post">
                                 <div class="mb-3">
                                     <label for="example" class="form-label fw-bold">Search</label>
-                                    <input type="search" class="form-control rounded-1" placeholder="Falonchi" name="search" id="example">
+                                    <input type="search" class="form-control rounded-1" placeholder="Falonchi"
+                                        name="search" id="example">
                                 </div>
-                                <div class="row d-flex ju   stify-content-between align-items-end">
+                                <div class="row d-flex justify-content-between align-items-end">
                                     <div class="col-6">
                                         <div class="mb-3 m-0">
                                             <label for="FormControlInput" class="form-label fw-bold">Price</label>
